@@ -33,10 +33,10 @@ namespace cal {
 namespace il {
 
 template<class E1,class E2,class E3>
-detail::ternary<E1,E2,E3,detail::cal_ternary_cmov_logical<typename E1::value_type,typename E2::value_type,typename E3::value_type> >
+detail::ternary<E1,E2,E3,detail::cal_ternary_select<typename E1::value_type,typename E2::value_type,typename E3::value_type> >
 select( const detail::expression<E1>& e1, const detail::expression<E2>& e2, const detail::expression<E3>& e3 )
 {
-    typedef detail::ternary<E1,E2,E3,detail::cal_ternary_cmov_logical<typename E1::value_type,typename E2::value_type,typename E3::value_type> > expression_type;
+    typedef detail::ternary<E1,E2,E3,detail::cal_ternary_select<typename E1::value_type,typename E2::value_type,typename E3::value_type> > expression_type;
     return expression_type(e1(),e2(),e3());
 }
 
